force-app/main/default/objects/CommuteType__c/CommuteType__c.object-meta.xml
<CustomObject>
    <label>Commute Type</label>
    <nameField>
        <label>Commute Type Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>