force-app/main/default/objects/CommuteType__c/fields/Air_Travel_Emissions_Factor__c.field-meta.xml
<CustomField>
    <fullName>Air_Travel_Emissions_Factor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Air Travel Emissions Factor</label>
    <referenceTo>AirTravelEmssnFctr</referenceTo>
    <relationshipLabel>Commute Type</relationshipLabel>
    <relationshipName>CommuteType</relationshipName>
    <type>Lookup</type>
</CustomField>