force-app/main/default/objects/CommuteType__c/fields/Ground_Travel_Emissions_Factor__c.field-meta.xml
<CustomField>
    <fullName>Ground_Travel_Emissions_Factor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ground Travel Emissions Factor</label>
    <referenceTo>GroundTravelEmssnFctr</referenceTo>
    <relationshipLabel>Commute Type</relationshipLabel>
    <relationshipName>CommuteType</relationshipName>
    <type>Lookup</type>
</CustomField>