force-app/main/default/objects/CommuteType__c/fields/Zero_Emission__c.field-meta.xml
<CustomField>
    <fullName>Zero_Emission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zero Emission</label>
    <type>Checkbox</type>
</CustomField>