force-app/main/default/objects/CommuteType__c/validationRules/Emissions_Factor_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Emissions_Factor_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>Zero_Emission__c != true &amp;&amp; Air_Travel_Emissions_Factor__c == null &amp;&amp; Ground_Travel_Emissions_Factor__c == null</errorConditionFormula>
    <errorMessage>&quot;Air Travel Emissions Factor&quot; or &quot;Ground Travel Emissions Factor&quot; is required</errorMessage>
</ValidationRule>