force-app/main/default/objects/CommuteType__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>isDefault__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Commute Types</label>
</ListView>